--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>🍪 Delícia de Biscoitos</h1>
     <nav>
       <a href="#home">Home</a>
-      <a href="/sobre/sobre.html">Sobre</a> 
+      <a href="c">Sobre</a> 
       <a href="/suporte/suporte.html">Suporte</a>
     </nav>
   </header>
