--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <title>Delícia de Biscoitos</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="src/cookie-icon.png" type="image/x-icon">
 </head>
 <body>
   <header>
     <h1>🍪 Delícia de Biscoitos</h1>
     <nav>
-      <a href="#home">Home</a>
-      <a href="c">Sobre</a> 
+      <a href="/index.html">Home</a>
+      <a href="/sobre/sobre.html">Sobre</a> 
       <a href="/suporte/suporte.html">Suporte</a>
     </nav>
   </header>
